k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: student-app

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: 261945560801.dkr.ecr.us-east-1.amazonaws.com/student-app/frontend:v3
          ports:
            - containerPort: 8080
          
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: student-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
